--- a/gestion_eventos/Views/Auth/Register.cshtml
+++ b/gestion_eventos/Views/Auth/Register.cshtml
@@ -18,6 +18,16 @@
                 <input asp-for="Password" class="form-control" type="password" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Role" class="control-label"></label>
+                <select asp-for="Role" class="form-control">
+                    <option value="">Seleccione un rol</option>
+                    <option value="Admin">Admin</option>
+                    <option value="Cliente">Cliente</option>
+                    <option value="Vendedor">Vendedor</option>
+                </select>
+                <span asp-validation-for="Role" class="text-danger"></span>
+            </div>
             <button type="submit" class="btn-register">Registrar</button>
             <p class="login-link">¿Ya tienes una cuenta? <a href="@Url.Action("Login", "Auth")">Iniciar sesión</a></p>
         </form>
