se hizo modificaciones en homecontroller para que el carrito aumente a "1" cuando se agrega un item y el carrito sea vista parcial

--- a/gestion_eventos/Views/Home/Carrito.cshtml
+++ b/gestion_eventos/Views/Home/Carrito.cshtml
@@ -1,4 +1,6 @@
-﻿<h2>Carrito de Compras</h2>
+﻿@model IEnumerable<gestion_eventos.Models.CarritoItemViewModel>
+
+<h2>Carrito de Compras</h2>
 
 <table class="table">
     <thead>
