exportacion de EXCEL

--- a/gestion_eventos/Views/Events/Edit.cshtml
+++ b/gestion_eventos/Views/Events/Edit.cshtml
@@ -42,6 +42,13 @@
                 <span asp-validation-for="AvailableTickets" class="text-danger"></span>
             </div>
 
+            <!-- Nuevo campo para ImagenURL -->
+            <div class="form-group">
+                <label asp-for="ImagenURL" class="control-label"></label>
+                <input asp-for="ImagenURL" class="form-control" />
+                <span asp-validation-for="ImagenURL" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Guardar Cambios" class="btn btn-primary" />
             </div>
