--- a/gestion_eventos/Views/Home/ComprarEntrada.cshtml
+++ b/gestion_eventos/Views/Home/ComprarEntrada.cshtml
@@ -6,11 +6,11 @@
     <input type="hidden" asp-for="EventId" />
     <div class="form-group">
         <label>Evento</label>
-        <input type="text" value="@Model.EventTitle" class="form-control" readonly />
+        <input type="text" value="@Model.EventTitle" class="form-control" readonly style="color: black;" />
     </div>
     <div class="form-group">
         <label>Boletos Disponibles</label>
-        <input type="number" value="@Model.AvailableTickets" class="form-control" readonly />
+        <input type="number" value="@Model.AvailableTickets" class="form-control" readonly style="color: black;" />
     </div>
     <div class="form-group">
         <label asp-for="TicketsToBuy"></label>
