se arreglaron problemas en el controlador de Home, ya funciona todo

--- a/gestion_eventos/Views/Home/ComprarEntrada.cshtml
+++ b/gestion_eventos/Views/Home/ComprarEntrada.cshtml
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
         <label>Precio por Boleto: </label>
-        <p>$@Model.Price</p>
+        <p style="color: white;">$@Model.Price</p>
     </div>
     <button type="submit" class="btn btn-success">Agregar al Carrito</button>
 </form>
